# allennlp

./: .bulldozer.yml  .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CITATION.cff  CONDA_BUILD_HOWTO.md  CONTRIBUTING.md  DEPRECATION.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.gpu.train  Dockerfile.pip  Dockerfile.test  ISSUES.md  Instructions.md  MANIFEST.in  MODELS.md  Makefile  README.md  RELEASE.md  RELEASE_PROCESS.md  ROADMAP.md  SECURITY.md  STYLE.md  benchmark.py  codecov.yml  confusion.txt  constraints.txt  daniel.py  data_vis.ipynb  dev-requirements.txt  dqa2_final_dev.json  dqa2_final_test.json  elmo_speed_test.py  (+29 more)
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md
active_learning/: combine_logits.py  make_data.py
allennlp/: __init__.py  __main__.py  execute_driver.py  gpt2_bug.py  nlp_api.py  pretrained.py  run  run.py  version.py
attV/: config.json
benchmarks/: pytest.ini
ci/: Dockerfile
data/: abbreviations.tsv  grow.grammar
demo/: README.md  index.html  package.json
doc/: Makefile  conf.py  index.rst
docs/: CONTRIBUTING.md
experiment_config/: bidaf.json  bidaf_self_atten.json  coref.json  decomposable_attention.json  ontoemma_config.json  semantic_role_labeler.json
experiments/: bootstrap.py  error_analysis.py  spansplit_train.py  velocity_train.py
model_config/: decomposable_attention.json
new/: config.json
notebooks/: vocabulary.ipynb
scripts/: 24hr_diff.sh  archive_surgery.py  benchmark_iter.py  black.sh  brendan_setup.bash  (+54 more)
(+3738 files in other folders)
