[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
line_length = 100
profile = "black"
skip_glob = [
    "**/__pycache__/",
    "tutorials/",
    "build/",
    ".git/",
    ".mypy_cache/",
    ".pytest_cache/",
    ".vscode/",
    ".venv/",
    "bdist/",
    "bdoc/",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
